# chess

./: .gitignore  Cargo.toml  Justfile
.cargo/: config.toml
chess-api/: Cargo.toml
chess-api/src/: lib.rs
chess-bitboard/: Cargo.toml
chess-bitboard/src/: color.rs  fmt.rs  lib.rs  ops.rs  piece.rs  pos.rs  side.rs
chess-bot/: Cargo.toml
chess-bot/src/: lib.rs
chess-cli/: Cargo.toml
chess-cli/src/: bot_fight.rs  logs.rs  main.rs  make_bot.rs
chess-engine/: Cargo.toml
chess-engine/src/: lib.rs  score.rs  wasm_instant.rs
chess-lookup/: Cargo.toml
chess-lookup-generator/: Cargo.toml
chess-lookup-generator/src/: book.rs  lib.rs  magic.rs  main.rs
chess-lookup-generator/src/eco/: vola.txt  volb.txt  volc.txt  vold.txt  vole.txt
chess-lookup/src/: between.rs  bishop_moves.rs  bishop_rays.rs  book.rs  king_moves.rs  knight_moves.rs  lib.rs  lichess_book.rs  line.rs  pawn.rs  pawn_attacks.rs  rook_moves.rs  rook_rays.rs  zobrist.rs
chess-movegen/: Cargo.toml
chess-movegen/src/: castle_rights.rs  fen.rs  iter.rs  lib.rs  main.rs  raw.rs
chess-movegen/src/iter/: pieces.rs  tests.rs
chess-movegen/tests/: perft.rs
chess-wasm/: Cargo.toml  Justfile
chess-wasm/site/: .package-lock.json  index.html  index.js  package-lock.json  package.json
chess-wasm/src/: lib.rs
chess-web/: Cargo.toml
chess-web/src/: main.rs
colorz-tracing/: Cargo.toml
colorz-tracing/src/: lib.rs
tracing-enabled/: Cargo.toml
tracing-enabled/src/: lib.rs
