[workspace]

resolver = '2'

members = [
    'chess-bitboard',
    'chess-lookup',
    'chess-lookup-generator',
    'chess-movegen',
    'chess-engine',
    'chess-cli',
]

[workspace.dependencies.chess]
version = '3'

[workspace.dependencies.tracing]
version = '0.1'

[workspace.dependencies.tracing-subscriber]
version = '0.3'

[profile.release]
debug = true
