[workspace]

resolver = '2'

members = [
    'chess-bitboard',
    'chess-lookup',
    'chess-lookup-generator',
    'chess-movegen',
    'chess-engine',
    'chess-cli',
    'chess-wasm',
    'chess-api',
    'chess-bot',

    'tracing-enabled',
    'colorz-tracing',
]

[workspace.dependencies.chess]
version = '3'

[workspace.dependencies.tracing]
version = '0.1'

[workspace.dependencies.tracing-subscriber]
version = '0.3'
features = ['env-filter']

[workspace.dependencies.colorz]
version = '1.1.2'
features = ['supports-color', 'std']

[profile.release]
debug = true
