[package]
name = "chess-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = '0.11'
chess-engine = { path = '../chess-engine' }
chess-movegen = { path = '../chess-movegen', features = ['abi_stable'] }
chess-bitboard = { path = '../chess-bitboard', features = ['abi_stable'] }