[package]
name = "chess-bitboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rand]
optional = true
version = '0.8'
features = ['small_rng']

[[bin]]
name = 'rook_moves'
required-features = ['rand']