[package]
name = "chess-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess-api = { path = '../chess-api' }
chess-movegen = { path = '../chess-movegen' }
chess-engine = { path = '../chess-engine' }
abi_stable = '0.11'

[lib]
crate-type = ["cdylib", 'rlib']