
[package]
name = "chess-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.chess-bitboard]
path = '../chess-bitboard'

[dependencies.chess-movegen]
path = '../chess-movegen'

[dependencies.chess-engine]
path = '../chess-engine'

[dependencies.clap]
version = '4'
features = ['derive']

[dependencies.bytesize]
version = '1.2'

[dependencies.tracing]
workspace = true

[dependencies.tracing-subscriber]
workspace = true

[dependencies.tracing-enabled]
path = '../tracing-enabled'

[dependencies.colorz-tracing]
path = '../colorz-tracing'

[dependencies.colorz]
workspace = true

[dependencies.chrono]
version = '0.4'
