
[package]
name = "chess-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.chess-bitboard]
path = '../chess-bitboard'

[dependencies.chess-movegen]
path = '../chess-movegen'

[dependencies.chess-lookup]
path = '../chess-lookup'

[dependencies.chess-engine]
path = '../chess-engine'

[dependencies.chess-api]
path = '../chess-api'

[dependencies.abi_stable]
version = '0.11'

[dependencies.rayon]
version = '1'

[dependencies.parse_duration]
version = '2'

[dependencies.rand]
version = '0.8'

[dependencies.clap]
version = '4'
features = ['derive', 'env']

[dependencies.bytesize]
version = '1.2'

[dependencies.tracing]
workspace = true

[dependencies.tracing-subscriber]
workspace = true

[dependencies.tracing-enabled]
path = '../tracing-enabled'

[dependencies.colorz-tracing]
path = '../colorz-tracing'

[dependencies.colorz]
workspace = true

[dependencies.chrono]
version = '0.4'
