[package]
name = "chess-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.chess-bitboard]
path = '../chess-bitboard'

[dependencies.chess-movegen]
path = '../chess-movegen'

[dependencies.chess-lookup]
path = '../chess-lookup'

[dependencies.readable]
version = '0.7'

[dependencies.tracing]
workspace = true

[dependencies.colorz]
version = '1'

[dependencies.tracing-enabled]
path = '../tracing-enabled'