[package]
name = "chess-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.chess-bitboard]
path = '../chess-bitboard'

[dependencies.chess-movegen]
path = '../chess-movegen'

[dependencies.chess-lookup]
path = '../chess-lookup'

[dependencies.readable]
version = '0.7'

[dependencies.instant]
version = '0.1'

[dependencies.tracing]
workspace = true

[dependencies.colorz]
version = '1'

[dependencies.tracing-enabled]
path = '../tracing-enabled'

[target.'cfg(any(all(target_arch = "wasm32", not(target_os = "wasi")),target_arch = "asmjs"))'.dependencies]
wasm-bindgen = '0.2'
web-sys = { version = '0.3', features = ["Performance", "Window"] }