[package]
name = "chess-lookup-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

book = ['chess-movegen', 'pgn-reader']

[dependencies.chess-bitboard]
path = '../chess-bitboard'

[dependencies.chess-movegen]
path = '../chess-movegen'
optional = true

[dependencies.rand]
version = '0.8'
features = ['small_rng']

[dependencies.pgn-reader]
version = '0.25'
optional = true
