[package]
name = "chess-lookup-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ['book']
book = [
    'chess-movegen',
    'pgn-reader',
    'zstd',
    'readable',
    'memchr',
    'bstr',
    'bytesize',
    'serde',
    'serde_json',
]

[dependencies.chess-bitboard]
path = '../chess-bitboard'

[dependencies.chess-movegen]
path = '../chess-movegen'
optional = true

[dependencies.rand]
version = '0.8'
features = ['small_rng']

[dependencies.pgn-reader]
version = '0.25'
optional = true

[dependencies.zstd]
version = '0.12'
optional = true

[dependencies.readable]
version = '0.8'
optional = true

[dependencies.bytesize]
version = '1'
optional = true

[dependencies.memchr]
version = '2'
optional = true

[dependencies.bstr]
version = '1'
optional = true

[dependencies.serde]
version = '1'
features = ['derive']
optional = true

[dependencies.serde_json]
version = '1'
optional = true
