[package]
name = "chess-movegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
abi_stable = ['chess-bitboard/abi_stable', 'dep:abi_stable']

[dependencies.chess-bitboard]
path = '../chess-bitboard'

[dependencies.chess-lookup]
path = '../chess-lookup'

[dependencies.arrayvec]
version = '0.7'

[dependencies.abi_stable]
version = '0.11'
optional = true