[package]
name = "chess-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
chess-bitboard = { path = '../chess-bitboard' }
chess-movegen = { path = '../chess-movegen' }
chess-engine = { path = '../chess-engine' }

wasm-bindgen = '0.2'
parse_duration = '2'

colorz = { version = '1' }
tracing = { version = '0.1' }
tracing-wasm = '0.2'
console_error_panic_hook = '0.1'
